# attic

alice/: README.md  build.gradle
alice/app/: build.gradle
alice/app/src/androidTest/java/com/minio/io/alice/: ExampleInstrumentedTest.java
alice/app/src/main/: AndroidManifest.xml
alice/app/src/main/java/com/minio/io/alice/: AliceTask.java  AudioWriter.java  BarcodeGraphic.java  BarcodeGraphicTracker.java  CameraDeviceManager.java  CameraSource.java  CameraSourcePreview.java  CustomBarcodeDetector.java  CustomFaceDetector.java  FaceGraphic.java  FrameHandler.java  FrameMetadata.java  GraphicFaceTracker.java  GraphicOverlay.java  IncomingReceiver.java  LocationRecord.java  LocationTracker.java  MainActivity.java  OcrDetectorProcessor.java  OcrGraphic.java  PreviewCallback.java  SensorDataLogger.java  SensorRecord.java  ServerHandler.java  ServerResponseTask.java  ServerUploadClient.java  Utils.java  XDebug.java  XrayResult.java
alice/app/src/main/res/layout/: activity_main.xml
alice/app/src/main/res/layout-land/: activity_main.xml
alice/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
alice/app/src/main/res/values-w820dp/: dimens.xml
alice/app/src/test/java/com/minio/io/alice/: ExampleUnitTest.java
alice/gradle/wrapper/: gradle-wrapper.properties
aminer/: .gitignore  README.md  analytics.go  config.go  find-raw.go  find.go  main.go  options.go  populate.go  urlencode.go
ioclone/: ioclone.go
minio-chef/: README.md  metadata.rb
minio-chef/libraries/: url_helper.rb
minio-chef/recipes/: default.rb
minio-chef/resources/: client_for.rb  server.rb
minio-go-legacy/: api-core.go  request.go
minio-go-legacy/examples/: bucketexists.go  getbucketacl.go  getobject.go  getpartialobject.go  listbuckets.go  listincompleteuploads.go  listobjects.go  makebucket.go  presignedgetobject.go  presignedpostobject.go  presignedputobject.go  putobject.go  removebucket.go  removeincompleteupload.go  removeobject.go  setbucketacl.go  statobject.go
minio-service-broker/: README.md
minio-service-broker/auth/: v4.go
minio-service-broker/cmd/agent/: main.go
minio-service-broker/cmd/broker/: main.go
minio-xl/: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  INSTALLGO.md  Makefile  README.md  config_test.go  controller-main.go  controller-rpc-signature-handler.go  controller-rpc-signature.go  controller-rpc.go  logger.go  main.go  routers.go  rpc-client.go  rpc-definitions.go  server-api-bucket-handlers.go  server-api-errors.go  server-api-headers.go  server-api-httprange.go  server-api-object-handlers.go  server-api-resources.go  server-api-response.go  server-api-signature-handler.go  server-api-signature.go  server-auth-config.go  server-auth.go  server-main.go  server-rpc.go  server_signV4_donut_cache_test.go  server_signV4_donut_test.go  signature-utils.go  version-main.go  xl-disks.go  xl-main.go  xl-rpc.go
minio-xl/buildscripts/: checkdeps.sh  gen-constants.go
s3verify/: .gitignore  .travis.yml  README.md  main.go
s3verify/cmd/: abort-multipart-upload.go  animation.go  bucket-policy-condition.go  bucket-policy.go  clean-s3verify.go  client-s3-trace.go  complete-multipart-upload.go  copy-object-if-match.go  copy-object-if-modified-since.go  copy-object-if-none-match.go  copy-object-if-unmodified-since.go  copy-object.go  data-types.go  error-response.go  flags.go  get-bucket-policy.go  get-object-if-match.go  get-object-if-modified-since.go  get-object-if-none-match.go  get-object-if-unmodified-since.go  get-object-range.go  get-object.go  globals.go  head-bucket.go  head-object-if-match.go  head-object-if-modified-since.go  head-object-if-none-match.go  head-object-if-unmodified-since.go  head-object.go  initiate-multipart-upload.go  list-buckets.go  list-multipart-uploads.go  list-objects-v1.go  list-objects-v2.go  list-parts.go  main.go  post-object.go  post-policy.go  presigned-get-object.go  presigned-put-object.go  (+16 more)
s3verify/signv4/: request-signature-v4.go  signv4-utils.go
scsi/: scsi_test.go
xray/: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SUBTREE.md  main.go
xray/buildscripts/: checkdeps.sh  checkgopath.sh
xray/cmd/: build-constants.go  certs.go  display-memory.go  globals.go  image.go  image_test.go  interface-ips.go  logger.go  motion.go  motion_test.go  runtime-checks.go  s3-client.go  sensor.go  websocket-conn.go  xray-common.go  xray-datatypes.go  xray-errors.go  xray-router.go  xray-router_test.go  xray.go
xray/contrib/Simd/: .gitignore  CMakeLists.txt  README.md  Simd.pc.in
xray/contrib/Simd/prj/sh/: GetVersion.sh
xray/contrib/Simd/src/Simd/: SimdBase.h  SimdBaseDetection.cpp  SimdBase_tinyxml2.cpp  SimdBase_tinyxml2.h  SimdLib.cpp  SimdLib.h  SimdNeonBgraToBgr.cpp  SimdNeonBgraToGray.cpp  SimdVersion.h
